--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
 </head>
 
-<body></body>
+<body>
+    <div class="header">
+        <div>Home</div>
+        <div>Portfolio</div>
+        <div>Contact</div>
+    </div>
+    <div class="about-me">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam itaque assumenda, odio eius commodi error impedit porro modi, eos consequatur in necessitatibus minima nobis corrupti. Eos dolores repudiandae voluptas similique.
+        </p>
+        <a href="pictureofme.jpg"></a>
+    </div>
+    <div class="portfolio">
+        <div class="project1"></div>
+        <div class="project2"></div>
+        <div class="project3"></div>
+        <div class="project4"></div>
+    </div>
+</body>
 
 </html>
