getting some cards going

--- a/index.html
+++ b/index.html
@@ -10,21 +10,71 @@
 
 <body>
     <div class="header">
+        <div><img src="./assets/logo2.svg" alt="Logo Picture" srcset="" /></div>
         <div>Home</div>
         <div>Portfolio</div>
         <div>Contact</div>
     </div>
     <div class="about-me">
+        <img src="./assets/stoup.jpg" alt="" />
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam itaque assumenda, odio eius commodi error impedit porro modi, eos consequatur in necessitatibus minima nobis corrupti. Eos dolores repudiandae voluptas similique.
         </p>
-        <a href="pictureofme.jpg"></a>
     </div>
     <div class="portfolio">
-        <div class="project1"></div>
-        <div class="project2"></div>
-        <div class="project3"></div>
-        <div class="project4"></div>
+        <div class="card">
+            <div class="header">
+                <p>The Header</p>
+            </div>
+            <div class="container">
+                <p>Some random texts</p>
+                <p>Yet another texts</p>
+                <p>Even more texts</p>
+                <p>I should probably make programming puns</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="header">
+                <p>The Header</p>
+            </div>
+            <div class="container">
+                <p>Some random texts</p>
+                <p>Yet another texts</p>
+                <p>Even more texts</p>
+                <p>I should probably make programming puns</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="header">
+                <p>The Header</p>
+            </div>
+            <div class="container">
+                <p>Some random texts</p>
+                <p>Yet another texts</p>
+                <p>Even more texts</p>
+                <p>I should probably make programming puns</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="header">
+                <p>The Header</p>
+            </div>
+            <div class="container">
+                <p>Some random texts</p>
+                <p>Yet another texts</p>
+                <p>Even more texts</p>
+                <p>I should probably make programming puns</p>
+            </div>
+        </div>
+    </div>
+    <div class="contact">
+        <div class="github"></div>
+        <div class="email"></div>
+        <div class="phone"></div>
+        <div class="resume"></div>
     </div>
 </body>
 
