working with the logo and header section

--- a/index.html
+++ b/index.html
@@ -10,65 +10,43 @@
 
 <body>
     <div class="header">
-        <div><img src="./assets/logo2.svg" alt="Logo Picture" srcset="" /></div>
-        <div>Home</div>
-        <div>Portfolio</div>
-        <div>Contact</div>
+        <div>
+            <img src="./assets/bluelogo.svg" alt="Logo Picture" srcset="" class="logo-picture" />
+        </div>
+        <div class="header-links">
+            <div>Home</div>
+            <div>Portfolio</div>
+            <div>Contact</div>
+        </div>
     </div>
     <div class="about-me">
-        <img src="./assets/stoup.jpg" alt="" />
+        <img src="./assets/stoup.jpg" alt="" class="picture" />
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam itaque assumenda, odio eius commodi error impedit porro modi, eos consequatur in necessitatibus minima nobis corrupti. Eos dolores repudiandae voluptas similique.
         </p>
     </div>
-    <div class="portfolio">
-        <div class="card">
-            <div class="header">
-                <p>The Header</p>
-            </div>
-            <div class="container">
-                <p>Some random texts</p>
-                <p>Yet another texts</p>
-                <p>Even more texts</p>
-                <p>I should probably make programming puns</p>
-            </div>
-        </div>
+    <div class="centered">
+        <section class="cards">
+            <article class="card">
+                <p>content for card one</p>
+            </article>
+            <!-- /card-one -->
 
-        <div class="card">
-            <div class="header">
-                <p>The Header</p>
-            </div>
-            <div class="container">
-                <p>Some random texts</p>
-                <p>Yet another texts</p>
-                <p>Even more texts</p>
-                <p>I should probably make programming puns</p>
-            </div>
-        </div>
+            <article class="card">
+                <p>content for card two</p>
+            </article>
+            <!-- /card-two -->
 
-        <div class="card">
-            <div class="header">
-                <p>The Header</p>
-            </div>
-            <div class="container">
-                <p>Some random texts</p>
-                <p>Yet another texts</p>
-                <p>Even more texts</p>
-                <p>I should probably make programming puns</p>
-            </div>
-        </div>
+            <article class="card">
+                <p>content for card three</p>
+            </article>
+            <!-- /card-three -->
 
-        <div class="card">
-            <div class="header">
-                <p>The Header</p>
-            </div>
-            <div class="container">
-                <p>Some random texts</p>
-                <p>Yet another texts</p>
-                <p>Even more texts</p>
-                <p>I should probably make programming puns</p>
-            </div>
-        </div>
+            <article class="card">
+                <p>content for card four</p>
+            </article>
+            <!-- /card-four -->
+        </section>
     </div>
     <div class="contact">
         <div class="github"></div>
