starting on the styling of the header a tags

--- a/index.html
+++ b/index.html
@@ -9,23 +9,22 @@
 </head>
 
 <body>
+    <div>
+        <img src="./assets/bluelogo.svg" alt="Logo Picture" srcset="" class="logo-picture" />
+    </div>
     <div class="header">
-        <div>
-            <img src="./assets/bluelogo.svg" alt="Logo Picture" srcset="" class="logo-picture" />
-        </div>
         <div class="header-links">
-            <div>Home</div>
-            <div>Portfolio</div>
-            <div>Contact</div>
+            <a href="#home" id="home">Home</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
         </div>
     </div>
     <div class="about-me">
-        <img src="./assets/stoup.jpg" alt="" class="picture" />
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam itaque assumenda, odio eius commodi error impedit porro modi, eos consequatur in necessitatibus minima nobis corrupti. Eos dolores repudiandae voluptas similique.
         </p>
     </div>
-    <div class="centered">
+    <div class="portfolio" id="portfolio">
         <section class="cards">
             <article class="card">
                 <p>content for card one</p>
@@ -48,7 +47,7 @@
             <!-- /card-four -->
         </section>
     </div>
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="github"></div>
         <div class="email"></div>
         <div class="phone"></div>
