--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 </head>
 
 <body>
-    <div>
-        <img src="./assets/bluelogo.svg" alt="Logo Picture" srcset="" class="logo-picture" />
-    </div>
-    <div class="header">
-        <div class="header-links">
-            <a href="#home" id="home">Home</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
+    <div class="header-container">
+        <div>
+            <img src="./assets/bluelogo.svg" alt="Logo Picture" srcset="" class="logo-picture" />
+        </div>
+        <div class="header">
+            <div class="header-links">
+                <a href="#home" id="home">Home</a>
+                <a href="#portfolio">Portfolio</a>
+                <a href="#contact">Contact</a>
+            </div>
         </div>
     </div>
     <div class="about-me">
+        <h1>Hello!</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam itaque assumenda, odio eius commodi error impedit porro modi, eos consequatur in necessitatibus minima nobis corrupti. Eos dolores repudiandae voluptas similique.
         </p>
