still working on cards

--- a/index.html
+++ b/index.html
@@ -4,57 +4,88 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
 </head>
 
 <body>
-    <div class="header-container">
-        <div>
-            <img src="./assets/bluelogo.svg" alt="Logo Picture" srcset="" class="logo-picture" />
-        </div>
-        <div class="header">
-            <div class="header-links">
-                <a href="#home" id="home">Home</a>
-                <a href="#portfolio">Portfolio</a>
-                <a href="#contact">Contact</a>
+    <div class="container">
+        <div class="header-container">
+            <div>
+                <img src="./assets/logo1.svg" alt="Logo Picture" srcset="" class="logo-picture" />
+            </div>
+            <div class="header">
+                <div class="header-links">
+                    <a href="#home" id="home">Home</a>
+                    <a href="#portfolio">Portfolio</a>
+                    <a href="#contact">Contact</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="about-me">
-        <h1>Hello!</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam itaque assumenda, odio eius commodi error impedit porro modi, eos consequatur in necessitatibus minima nobis corrupti. Eos dolores repudiandae voluptas similique.
-        </p>
-    </div>
-    <div class="portfolio" id="portfolio">
-        <section class="cards">
-            <article class="card">
-                <p>content for card one</p>
-            </article>
-            <!-- /card-one -->
+        <div class="about-me">
+            <h1>WHO I AM:</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam itaque assumenda, odio eius commodi error impedit porro modi, eos consequatur in necessitatibus minima nobis corrupti. Eos dolores repudiandae voluptas similique.
+            </p>
+        </div>
+        <div class="portfolio-container">
+            <h1>PORTFOLIO</h1>
+            <div class="row">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="" alt="">
+                    </div>
+                    <div class="card-body">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi neque molestiae eius explicabo mollitia tempore reiciendis, vel, sequi.
+                        </p>
+                        <a href="#" class="btn">Read more</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <h1>Vue</h1>
+                    </div>
+                    <div class="card-body">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi neque molestiae eius explicabo mollitia tempore reiciendis, vel, sequi.
+                        </p>
+                        <a href="#" class="btn">Read more</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <h1>Angular</h1>
+                    </div>
+                    <div class="card-body">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi neque molestiae eius explicabo mollitia tempore reiciendis, vel, sequi.
+                        </p>
+                        <a href="#" class="btn">Read more</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <h1>JQuery</h1>
+                    </div>
+                    <div class="card-body">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi neque molestiae eius explicabo mollitia tempore reiciendis, vel, sequi.
+                        </p>
+                        <a href="#" class="btn">Read more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contact" id="contact"></div>
+        <h1>Contact</h1>
 
-            <article class="card">
-                <p>content for card two</p>
-            </article>
-            <!-- /card-two -->
-
-            <article class="card">
-                <p>content for card three</p>
-            </article>
-            <!-- /card-three -->
-
-            <article class="card">
-                <p>content for card four</p>
-            </article>
-            <!-- /card-four -->
-        </section>
+        <div class="github">Github</div>
+        <div class="email">Email</div>
+        <div class="phone">Number</div>
+        <div class="resume">Resume</div>
     </div>
-    <div class="contact" id="contact">
-        <div class="github"></div>
-        <div class="email"></div>
-        <div class="phone"></div>
-        <div class="resume"></div>
     </div>
 </body>
 
