made max size smaller on text, added hover effect on portfolio buttons

--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
             <h1>WHO I AM:</h1>
             <p>
                 Hello, my name is Ryan. I am a full stack web developer living in Brooklyn, NY. I work with HTML, CSS, Javascript, NodeJS, Express, MongoDB, MySQL, React and Vue. Right now, I am continuing to learn more about those and starting to learn about PostgreSQL
-                and TailwindCSS. When not learning or working on a project, I get to hang out with my wife and dog, Sam and Ted. I started running during the pandemic and ended up running a marathon. Now I am training for a 50K ultra marathon. My other
-                favorite pastimes are drinking coffee and eating tacos and pizza. Growing up near or in Cleveland most of my life I was raised loving the Browns, Cleveland Baseball team and Cavs(we miss you Lebron). One day, maybe I will be able to watch
-                a Mets vs Cleveland Baseball team world series.
+                and TailwindCSS. <br />
+                <br />When not learning or working on a project, I get to hang out with my wife and dog, Sam and Ted. I started running during the pandemic and ended up running a marathon. Now I am training for a 50K ultra marathon. My other favorite
+                pastimes are drinking coffee and eating tacos and pizza. Growing up near or in Cleveland most of my life I was raised loving the Browns, Cleveland Baseball team and Cavs(we miss you Lebron). One day, maybe I will be able to watch a Mets
+                vs Cleveland Baseball team world series.
             </p>
         </div>
         <div class="portfolio-container">
-            <h1>PORTFOLIO</h1>
+            <h1>PORTFOLIO:</h1>
             <div class="row">
                 <div class="card">
                     <div class="card-header">
@@ -56,14 +57,14 @@
           </div>
           <div class="card">
             <div class="card-header">
-              <h2>Github Finder!</h2>
+              <h2>Github Finder</h2>
             </div>
             <div class="card-body">
               <p>
                 This application uses the Github API to allow a user to search
                 users and check out their repos.
               </p>
-              <a href="#" class="btn">Read more</a>
+              <a href="#" class="btn">Check it out!</a>
                     </div>
                 </div>
                 <div class="card">
@@ -99,7 +100,7 @@
         </div>
       </div>
 
-      <h1>Contact</h1>
+      <h1>CONTACT:</h1>
       <div class="contact" id="contact">
         <a href="www.github.com/wigsters52">
           <div class="fab fa-github fa-3x">
