contact links styled

--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
         <div class="about-me">
             <h1>WHO I AM:</h1>
             <p>
-                Hello, my name is Ryan. I am a full stack web developer living in Brooklyn, NY. I work with HTML, CSS, Javascript, NodeJS, Express, MongoDB, MySQL, React and Vue. Right now, I am continuing to learn more about those and starting to learn about PostgreSQL
-                and TailwindCSS. <br />
-                <br />When not learning or working on a project, I get to hang out with my wife and dog, Sam and Ted. I started running during the pandemic and ended up running a marathon. Now I am training for a 50K ultra marathon. My other favorite
-                pastimes are drinking coffee and eating tacos and pizza. Growing up near or in Cleveland most of my life I was raised loving the Browns, Cleveland Baseball team and Cavs(we miss you Lebron). One day, maybe I will be able to watch a Mets
-                vs Cleveland Baseball team world series.
+                My name is Ryan, and I am a Full Stack web developer living in Brooklyn, NY. I work with HTML, CSS, Javascript, NodeJS, Express, MongoDB, MySQL, React, and Vue. I completed the Case Western Reserve Full Stack Bootcamp, but have also continued to find
+                new projects to expand my knowledge. Right now, I am learning about PostgreSQL and TailwindCSS. I am looking to join a team where I can put my knowledge into practice and continue to add to my skillset.
+                <br />
+                <br /> When I'm not working on a project, you'll find me hanging out with my wife Sam and our dog Ted. I started running during the pandemic and completed my first marathon in December. Now I am training for a 50K ultra marathon. I love
+                exploring New York and finding new places to drink coffee, eat tacos, or get a slice of pizza. I lived in the Cleveland area most of my life so I love all the Cleveland sports teams (miss you LeBron). One day, I hope to watch a Mets vs
+                Cleveland Baseball team world series.
             </p>
         </div>
         <div class="portfolio-container">
@@ -101,16 +102,28 @@
       </div>
 
       <h1>CONTACT:</h1>
-      <div class="contact" id="contact">
+      <div class="contact">
         <a href="www.github.com/wigsters52">
-          <div class="fab fa-github fa-3x">
+          <div class="fab fa-github fa-2x">
             <p>Github</p>
           </div>
         </a>
 
-                        <div class="email">Email</div>
-                        <div class="phone">Number</div>
-                        <div class="resume">Resume</div>
+                        <a href="www.github.com/wigsters52">
+                            <div class="fa fa-envelope-square fa-2x">
+                                <p>Email</p>
+                            </div>
+                        </a>
+                        <a href="www.github.com/wigsters52">
+                            <div class="fa fa-mobile fa-2x">
+                                <p>Phone</p>
+                            </div>
+                        </a>
+                        <a href="www.github.com/wigsters52">
+                            <div class="far fa-copy fa-2x">
+                                <p>Resume</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
 </body>
