--- a/index.html
+++ b/index.html
@@ -65,18 +65,30 @@
                 This application uses the Github API to allow a user to search
                 users and check out their repos.
               </p>
-              <a href="#" class="btn">Check it out!</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-header">
-                        <h2>Vue-To-Do-List</h2>
-                    </div>
-                    <div class="card-body">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi neque molestiae eius explicabo mollitia tempore reiciendis, vel, sequi.
-                        </p>
-                        <a href="https://agitated-lamarr-e7ed8c.netlify.app/" class="btn" target="_blank" rel="noopener noreferrer">Check it out!</a
+              <a
+                href="https://wigsters52.github.io/Github-Finder-/"
+                class="btn"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Check it out!</a
+              >
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <h2>Tailwind-CSS-Hecks-Studios-Fake-Page</h2>
+            </div>
+            <div class="card-body">
+              <p>
+                Using the Tailwind Youtube series to create a fake Ecommerce
+                page.
+              </p>
+              <a
+                href="https://wigsters52.github.io/Tailwind-CSS-Hecks-Studios-Fake-Page/"
+                class="btn"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Check it out!</a
               >
             </div>
           </div>
@@ -103,23 +115,27 @@
 
       <h1>CONTACT:</h1>
       <div class="contact">
-        <a href="www.github.com/wigsters52">
+        <a
+          href="https://www.github.com/wigsters52"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <div class="fab fa-github fa-2x">
             <p>Github</p>
           </div>
         </a>
 
-                        <a href="www.github.com/wigsters52">
+                        <a href="mailto: ryanwiggins52@gmail.com" target="_blank" rel="noopener noreferrer">
                             <div class="fa fa-envelope-square fa-2x">
                                 <p>Email</p>
                             </div>
                         </a>
-                        <a href="www.github.com/wigsters52">
+                        <a href="tel:3309076543">
                             <div class="fa fa-mobile fa-2x">
                                 <p>Phone</p>
                             </div>
                         </a>
-                        <a href="www.github.com/wigsters52">
+                        <a href="./assets/Ryan_Wiggins.pdf" target="_blank" rel="noopener noreferrer">
                             <div class="far fa-copy fa-2x">
                                 <p>Resume</p>
                             </div>
