--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 Cleveland Baseball team world series.
             </p>
         </div>
-        <div class="portfolio-container">
+        <div class="portfolio-container" id="portfolio">
             <h1>PORTFOLIO:</h1>
             <div class="row">
                 <div class="card">
@@ -114,7 +114,7 @@
       </div>
 
       <h1>CONTACT:</h1>
-      <div class="contact">
+      <div class="contact" id="contact">
         <a
           href="https://www.github.com/wigsters52"
           target="_blank"
