added weather app to portfolio

--- a/index.html
+++ b/index.html
@@ -76,15 +76,14 @@
           </div>
           <div class="card">
             <div class="card-header">
-              <h2>Tailwind-CSS-Hecks-Studios-Fake-Page</h2>
+              <h2>Weather App</h2>
             </div>
             <div class="card-body">
               <p>
-                Using the Tailwind Youtube series to create a fake Ecommerce
-                page.
+                Fullstack weather app. This uses the Weatherstack and Mapbox Api's to provide the weather for a searched location. 
               </p>
               <a
-                href="https://wigsters52.github.io/Tailwind-CSS-Hecks-Studios-Fake-Page/"
+                href="https://rwiggins-weather-application.herokuapp.com/"
                 class="btn"
                 target="_blank"
                 rel="noopener noreferrer"
